--- a/application-1-frontend/pubspec.yaml
+++ b/application-1-frontend/pubspec.yaml
@@ -1,4 +1,4 @@
-name: MoneyMinder
+name: finku_clone_slicing
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -61,9 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/assets/MoneyMinder_logo.png
-     #- images/a_dot_ham.jpeg
+  #assets:
+       #- images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
