--- a/application-1-frontend/pubspec.yaml
+++ b/application-1-frontend/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+2
   syncfusion_flutter_charts: ^24.1.47+2
+  flutter_local_notifications: ^16.3.2
 
 dev_dependencies:
   flutter_test:
