--- a/application-1-frontend/pubspec.yaml
+++ b/application-1-frontend/pubspec.yaml
@@ -1,4 +1,4 @@
-name: finku_clone_slicing
+name: MoneyMinder
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
