--- a/application-1-frontend/pubspec.yaml
+++ b/application-1-frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+2
+  firebase_auth: ^4.16.0
   syncfusion_flutter_charts: ^24.1.47+2
   flutter_local_notifications: ^16.3.2
 
