--- a/application-1-frontend/pubspec.yaml
+++ b/application-1-frontend/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.24.2
 
   # Utility Packages
   http: ^1.1.0
@@ -75,6 +76,9 @@ flutter:
 
   assets:
     - assets/images/logo.png
+    - assets/images/1.png
+    - assets/images/2.png
+    - assets/images/3.png
       #- images/a_dot_ham.jpeg
 
 
