--- a/application-1-frontend/pubspec.yaml
+++ b/application-1-frontend/pubspec.yaml
@@ -80,6 +80,9 @@ flutter:
     - assets/images/1.png
     - assets/images/2.png
     - assets/images/3.png
+    - assets/images/Transfer.png
+    - assets/images/star.png
+    - assets/images/fiverr.png
       #- images/a_dot_ham.jpeg
 
 
