--- a/application-1-frontend/pubspec.yaml
+++ b/application-1-frontend/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_auth: ^4.16.0
   syncfusion_flutter_charts: ^24.1.47+2
   flutter_local_notifications: ^16.3.2
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
