--- a/application-1-frontend/pubspec.yaml
+++ b/application-1-frontend/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   syncfusion_flutter_charts: ^24.1.47+2
   flutter_local_notifications: ^16.3.2
   sqflite: ^2.3.2
+  email_validator: ^2.1.17
+  firebase_database: ^10.4.4
 
 dev_dependencies:
   flutter_test:
